Count newlines in textareas correctly. bug 331482, r+sr=sicking